<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/settings"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:contentDescription="@string/statusApp"
                android:focusable="true"
                android:src="@drawable/btn_settings" />

            <LinearLayout
                android:id="@+id/panelApp"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/status_bar"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/money"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/moneyUser"
                    android:src="@drawable/money_status" />

                <TextView
                    android:id="@+id/moneyNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/numRes"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <ImageView
                    android:id="@+id/life"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="40dp"
                    android:contentDescription="@string/lifeUser"
                    android:src="@drawable/life_status" />

                <TextView
                    android:id="@+id/lifeNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/numRes"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/storeBtn"
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:clickable="true"
                    android:contentDescription="@string/storeApp"
                    android:focusable="true"
                    android:src="@drawable/btn_store" />

            </LinearLayout>

            <ImageView
                android:id="@+id/exit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:contentDescription="@string/exitApp"
                android:focusable="true"
                android:src="@drawable/btn_exit"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/about_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_story"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/textSeries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/series"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textAnnotation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/annotation"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="55dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/history">

            <ImageView
                android:id="@+id/btn_return"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:contentDescription="@string/returnHistory"
                android:focusable="true"
                android:src="@drawable/btn_return"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/btm_play"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:clickable="true"
                android:contentDescription="@string/playHistory"
                android:focusable="true"
                android:src="@drawable/btn_play" />


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/btm_adb"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:contentDescription="@string/adbBtn"
                android:focusable="true"
                android:src="@drawable/btn_view_reclama"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>