<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dressing_room"
    android:orientation="vertical"
    tools:context=".HistoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigation_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:contentDescription="@string/backMenu"
            android:focusable="true"
            android:src="@drawable/btn_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/persons"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/personMagdalena"
            android:scaleType="centerCrop"
            android:src="@drawable/notperson"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/about_history"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/dialog_about_history"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/persons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="20dp"
                android:text="@string/text_begin_history"
                android:textAlignment="textStart"
                android:textColor="@color/green_text"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>